test/sematest/valid/use_variable_after_declaration_in_same_statement_without_init.java
class Foobar {
  public static void main (String[] args) {
      int x = x + 1;
  }
}
