test/sematest/invalid/overloaded_main_with_method2.java
class Test {
  public static void notMain(String[] args) {}
  public void notMain() {}
}
